<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_height="wrap_content">

    <!--Kaisa kiya hai bc :(-->
    <ImageView
        android:id="@+id/imb1"
        android:layout_width="match_parent"
        android:tint="#6F000000"
        android:layout_height="130dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/some_description"
        android:padding="0dp"/>


    <Button
        android:id="@+id/button15"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button"
        android:layout_marginLeft="117dp"
        android:layout_marginStart="117dp"
        android:background="@color/colorAccent"
        android:text="@string/_115_min"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imb1"
        android:layout_marginTop="5dp"
        android:fontFamily="serif"
        android:text="@string/standard"
        android:textColor="#000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt1"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:background="#ff006a"
        android:text="@string/_10_30"
        android:textColor="#fff"
        android:textSize="12sp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt1"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/button1"
        android:layout_toRightOf="@id/button1"
        android:background="#ff006a"
        android:text="@string/_12_30"
        android:textColor="#fff"
        android:textSize="12sp"
        tools:ignore="UnknownId" />

    <Button
        android:id="@+id/button3"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt1"
        android:layout_marginLeft="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@id/button2"
        android:layout_toRightOf="@id/button2"
        android:background="#ff006a"
        android:text="@string/_15_30"
        android:textColor="#fff"
        android:textSize="12sp"
        tools:ignore="UnknownId" />


    <TextView
        android:id="@+id/txt2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:layout_marginTop="10dp"
        android:fontFamily="serif"
        android:text="@string/_4dx_virgin_radio"
        android:textColor="#000"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button4"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt2"
        android:layout_gravity="left"
        android:layout_marginTop="5dp"
        android:background="#ff006a"
        android:text="@string/_20_30"
        android:textColor="#fff"
        android:textSize="12sp"
        tools:ignore="RtlHardcoded" />

    <Button
        android:id="@+id/button5"
        android:layout_width="75dp"
        android:layout_height="25dp"
        android:layout_below="@+id/txt2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@id/button4"
        android:background="#ff006a"
        android:text="@string/_00_00"
        android:textColor="#fff"
        android:textSize="12sp"
        tools:ignore="UnknownId"
        android:layout_marginStart="15dp"
        android:layout_toEndOf="@id/button4" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button1"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/button1"
        android:layout_marginTop="70dp"
        android:text="@string/the_meg"
        android:textAppearance="@style/TextAppearance.AppCompat.Caption"
        android:textColor="@color/colorAccent"
        android:textSize="15sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="18dp"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/textView"
        android:layout_marginTop="96dp"
        android:background="@color/colorAccent"
        android:text="@string/english"
        android:textColor="@android:color/black" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/button3"
        android:layout_alignRight="@+id/button3"
        android:layout_alignTop="@+id/button"
        android:text="@string/info"
        android:textColor="@color/colorAccent"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imb1"
        android:padding="8dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:background="@null"
        app:srcCompat="@drawable/play"
        android:contentDescription="@string/some_description" />
</RelativeLayout>
