<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/standard"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="10:30 3D"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="12:30 3D"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="2:30"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/_4dx_virgin_radio"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="15:30 3D"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="18:00"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginRight="8dp" />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Platinum"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="10:30 3D"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="12:30 3D"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="2:30"
            android:textColor="#fff"
            android:textSize="12sp" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gold"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="15:30 3D"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" />

        <Button
            android:layout_width="75dp"
            android:layout_height="25dp"
            android:layout_gravity="left"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="5dp"
            android:background="#ff006a"
            android:text="18:00"
            android:textColor="#fff"
            android:textSize="12sp"
            android:layout_marginRight="8dp" />

    </LinearLayout>

</LinearLayout>